[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cryoquake"
version = "0.1.0"
description = "Reusable code for my projects"
authors = [{ name = "Jared C. Magyar" }]
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["src"]
